syntax = "proto3";

option csharp_namespace = "UserService.Presentation.Protos.Server.UserPackage";

package userPackage;

service UserPackage {
  rpc CheckSessionRemaining (CheckSessionRemainingRequest) returns (CheckSessionRemainingResponse);
}

message CheckSessionRemainingRequest {
  string userId = 1;
}

message CheckSessionRemainingResponse {
  bool isSuccess = 1;
  double price = 2;
  string userPackageId = 3;
}